# yadl

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  clean_generated_examples.sh
examples/classic_examples/: 3d_example.cpp  basic_examples.cpp  cube_example.cpp  examples.cpp  model_render_example.cpp  readme_example.cpp  texture_mapping_example.cpp  triangle_example.cpp
examples/sdl_examples/: circle_example.cpp  gfx_example.cpp  model_viewer_example.cpp  paint_example.cpp  text_example.cpp
examples/sdl_examples/sdl_core/: sdl_core.hpp
examples/sdl_examples/sdl_core/3rparty/imgui/backends/: imgui_impl_sdlrenderer.cpp
examples/src/: examples.cpp
tests/: CMakeLists.txt
tests/src/: examples.cpp  main.cpp
yadl/: CMakeLists.txt
yadl/include/private/: font_internal.hpp  io.hpp  ppm.hpp
yadl/include/public/yadl/: animation.hpp  canvas.hpp  color.hpp  context.hpp  debug.hpp  depth_buffer.hpp  fileformat.hpp  font.hpp  gfx.hpp  guard.hpp  io.hpp  pixel.hpp  shape.hpp  text.hpp  tris.hpp  yadl.hpp
yadl/src/: Canvas.cpp  animation.cpp  canvas.cpp  depth_buffer.cpp  font.cpp  font_internal.cpp  gfx.cpp  io.cpp  ppm.cpp  shape.cpp  text.cpp  tris.cpp
